[package]
name = "inverted_index"
authors = ["Valerii Krivchikov"]

version = "0.1.0"
edition = "2021"

[dependencies]
rust-stemmers = "1.2.0"
unicode-segmentation = "1.10.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "analyzer"
harness = false

[[bench]]
name = "index"
harness = false